# cga

./: Cargo.toml
.cargo/: config.toml
src/: app.rs  bresenham.rs  camera.rs  hehe.rs  main.rs  obj_file.rs  rendering.rs  scanline.rs  triangle.rs
