[package]
name = "cga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wavefront_obj = "10.0.0"
egui = "0.25.0"
serde = "1.0.196"
eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
nalgebra-glm = "0.18.0"
nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
delaunator = "1.0.2"
rand = "0.8.5"
wavefront = "0.2.3"
rayon = "1.10.0"
itertools = "0.12.1"
image = "0.25.1"

[profile.release]
# lto = true
# codegen-units = 1
